--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,6 @@
     </servlet-mapping>
     
     <welcome-file-list>
-        <welcome-file>news/list</welcome-file>
+        <welcome-file>news/list/1</welcome-file>
     </welcome-file-list>
 </web-app>
